force-app/main/default/objects/Quote_Line_Item__c/Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Stores individual line items for a quote.</description>
    <label>Quote Line Item</label>
    <nameField>
        <displayFormat>LINE-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>