force-app/main/default/objects/Quote_Line_Item__c/fields/Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit__c</fullName>
    <description>Billing unit inherited from the source object: Hour, Subscription, or Each.</description>
    <label>Billing Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>