force-app/main/default/objects/Quote_Line_Item__c/fields/Default_Discount__c.field-meta.xml
<CustomField>
    <fullName>Default_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Auto-calculated volume discount percentage.</description>
    <label>Default Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>