force-app/main/default/objects/Quote_Line_Item__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description>The margin percentage for this line item.</description>
    <formula>IF(Net_Total__c &gt; 0, (Net_Total__c - Total_Line_Cost__c) / Net_Total__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>