force-app/main/default/objects/Quote_Line_Item__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <description>Total amount for this line item after discount.</description>
    <formula>Quantity__c * Unit_Price__c * (1 - Discount_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>