force-app/main/default/objects/Quote_Line_Item__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Stores the phase name for this line item (e.g., Phase 1, Phase 2, Default).</description>
    <label>Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>