force-app/main/default/objects/Quote_Line_Item__c/fields/Total_Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Cost__c</fullName>
    <description>Total cost for this line item based on quantity and unit cost.</description>
    <formula>Quantity__c * Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>